# addonfactory-repository-template

./: .pre-commit-config.yaml  README.md  pyproject.toml  repo_non_splunk.csv  repo_temp.csv  repo_try.csv  repo_ui.csv  repositories_all_addons.csv  repositories_develop.backup  repositories_develop.csv  repositories_ko_only.csv  repositories_main.csv  repositories_master.csv  repositories_try.csv  repositories_ui_modinput.csv  sync.sh  trigger-aws.csv
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: develop.yaml  main.yaml  pre-commit.yaml  requirements_unit_test.yml  sync.yaml  token-sync.yaml  update_app_manifest_license.py
enforce/: .gitignore  .releaserc  README-test.md  docker-compose-ci.yml  docker-compose.yml  pytest.ini
enforce/.circleci/: config.yml
enforce/.github/: CODEOWNERS
enforce/.github/workflows/: build-test-release.yml  requirements_unit_test.yml
enforce/tests/: entrypoint.sh  run_knowledge_tests  run_requirement_tests
seed/: .app-vetting.yaml  .fossa.yml  .ort.yml  .semgrepignore  README.md  requirements_addon_specific.txt
seed/.github/workflows/: exclude-patterns.txt
seed/package/: app.manifest
seed/tests/knowledge/: conftest.py
tools/: branch_protection_rules.sh  sync.py  sync.sh  update_app_manifest_license.py
tools/teams/: create_github_teams.py  requirements.txt  teams.yaml
